Update green.css 1. Resize margin-bottom of p 2. Edit text-align of #fh5co-pricing .price-box 3. Resize padding and font-size of #fh5co-pricing .price-box

--- a/css/green.css
+++ b/css/green.css
@@ -34,7 +34,7 @@ a:hover, a:active, a:focus {
 }
 
 p {
-  margin-bottom: 1.5em;
+  margin-bottom: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -381,7 +381,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #fh5co-pricing .price-box {
   border: 2px solid #ECEEF0;
-  text-align: center;
+  text-align: left;
   padding: 30px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -420,8 +420,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 #fh5co-pricing .pricing-plan {
   margin: 0;
-  padding: 0;
-  font-size: 15px;
+  padding-bottom: 15px;
+  font-size: 18px;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: 700;
